<resources>
    <string name="Distance_tab_label">Distance</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_app_build">Plugin Build - %1$d</string>
    <string name="about_app_version">Plugin Version - %1$s</string>
    <string name="about_atak_version">ATAK Version - %1$s</string>
    <string name="about_battery_level">Battery - %1$d%%</string>
    <string name="about_firmware_version">Firmware Version - %1$s</string>
    <string name="about_installed_date">Installed Date - %1$s</string>
    <string name="about_serial_number">Serial Number - %1$s</string>
    <string name="accessory">Accessory</string>
    <string name="account_info">"Organization: %1$s
Username: %2$s"</string>
    <string name="acitvate_deployment_pack_download_complete">Download complete. Press activate button to enable.</string>
    <string name="acquire_key">Acquire key via QR code</string>
    <string name="actions">ACTIONS</string>
    <string name="activate_deployment_pack">Activate Deployment Pack</string>
    <string name="activate_deployment_pack_download_complete">Download complete. Press the activation button to enable.</string>
    <string name="activate_deployment_pack_download_instruction">Click Download to receive deployment pack. IMPORTANT: Larger files may take several minutes to finish unzipping after Deployment Pack downloads.</string>
    <string name="activate_deployment_pack_label">Activate Deployment Pack</string>
    <string name="add_channel_button_text">Add Channel</string>
    <string name="add_frequency_dialog_hint">154.2300</string>
    <string name="add_frequency_dialog_message">"Valid frequencies range from 142.00 MHz - 175.00 MHz for VHF or %1$.2f MHz - 480.00 MHz for UHF

"</string>
    <string name="add_frequency_set">Add Frequency Set</string>
    <string name="advanced_label">Advanced</string>
    <string name="advanced_spectrum_dialog_message">Advanced mode allows you to enter any frequency value goTenna supports. Note that using frequencies from separate spectrums can result in poor performance.</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_clear">Clear</string>
    <string name="alert_confirm">Confirm</string>
    <string name="alert_continue">Continue</string>
    <string name="alert_dismiss">Dismiss</string>
    <string name="alert_do_not_show_again">Do not show again</string>
    <string name="alert_ignore">Ignore</string>
    <string name="alert_ignore_forever">Ignore Forever</string>
    <string name="alert_no">No</string>
    <string name="alert_ok">OK</string>
    <string name="alert_remove">Remove</string>
    <string name="alert_submit">Submit</string>
    <string name="alert_turn_off">Turn Off</string>
    <string name="alert_yes">Yes</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="antenna_average">Average</string>
    <string name="antenna_bad">Bad</string>
    <string name="antenna_bad_message">"Antenna is bad! Check your antenna! Tap ignore to suppress this warning for the rest of your app's session"</string>
    <string name="antenna_bad_push_message">Check your antenna!</string>
    <string name="antenna_bad_push_title">Antenna is bad!</string>
    <string name="antenna_bad_title">Warning</string>
    <string name="antenna_excellent">Excellent</string>
    <string name="antenna_good">Good</string>
    <string name="antenna_poor">Poor</string>
    <string name="antenna_quality_format">Antenna Quality: %s</string>
    <string name="antenna_quality_info_message">"This is a measurement of the return loss on your antenna. Note that the loss can vary widely depending on where you wear your antenna, and what might be around it. Measurements are taken with each transmission. If you see a poor reading it may mean the antenna is of poor quality, or should be positioned differently.

S₁₁: %1$sdB"</string>
    <string name="antenna_quality_info_title">Antenna Quality</string>
    <string name="antenna_quality_unknown">No Antenna Connected</string>
    <string name="antenna_unknown">Unknown</string>
    <string name="app_desc">An ATAK Plugin designed to configure goTenna X devices.</string>
    <string name="app_name">goTenna ATAK Plugin</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="atak_core_version_name_build">%1$s-%2$s-%3$d</string>
    <string name="auto_update_location">Automatic Position Updates</string>
    <string name="backahul_individual_header_text">Select individual or multiple users</string>
    <string name="backahul_selected_multiple">Multiple</string>
    <string name="backhaul_allow_all_header">Allow All</string>
    <string name="backhaul_broadcast_item_text">Toggle to allow all users</string>
    <string name="backhaul_info_dialog_message">Allow All will allow fronthaul for all current and new users on your network.</string>
    <string name="backhaul_settings">Backhaul Settings</string>
    <string name="backhaul_settings_contact_fronthaul_header">Select the user who will be the fronthaul node.</string>
    <string name="backhaul_settings_contact_fronthaul_title">Receiver</string>
    <string name="backhaul_settings_description">"Enable and Adjust Backhaul Settings here.
Backhaul Message Interval is every 5 seconds."</string>
    <string name="backhaul_settings_item_enable_backhaul_description">The goTenna will act as a backhaul node.</string>
    <string name="backhaul_settings_item_enable_backhaul_title">Enable Backhaul</string>
    <string name="backpressure_alert_message">Back Pressure Alert: Messages may be delayed due to network congestion.</string>
    <string name="bandwidth_bitrate_set_failure">Failed to set Bandwidth to %1$.1f</string>
    <string name="bandwidth_bitrate_set_success">Successfully set Bandwidth to %1$s and Bitrate to %2$s</string>
    <string name="bandwidth_label">Bandwidth</string>
    <string name="battery_charging">Battery Charging</string>
    <string name="battery_charging_prox">Battery Charging (Range Reduced)</string>
    <string name="battery_percentage">Battery %d%%</string>
    <string name="battery_unknown">Pending Connection to Device</string>
    <string name="bluetooth_off">Turn Bluetooth On to Connect</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="device_config_power">Power</string>
    <string name="dnop_table_header_battery">Battery</string>
    <string name="dnop_table_header_callsign">Callsign</string>
    <string name="dnop_table_header_last_seen">Last Seen</string>
    <string name="dnop_table_header_rssi">RSSI</string>
    <string name="dnop_table_header_rx">Rx</string>
    <string name="dnop_table_header_tx">Tx</string>
    <string name="edittext_pattern_alphanumeric">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="edittext_pattern_letters">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="edittext_pattern_numbers">0123456789</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_email">Email</string>
    <string name="forgot_password_sub_title">Enter your email to receive a reset password link.</string>
    <string name="forgot_password_submit_button">Reset Password</string>
    <string name="login_name">E-mail or Username</string>
    <string name="login_next_button">Next</string>
    <string name="login_offline">Deploying offline?</string>
    <string name="login_organization">Organization</string>
    <string name="login_password">Password</string>
    <string name="login_sub_title">Log into the configuration portal. You should have received access from your admin via email.</string>
    <string name="login_title">Welcome</string>
    <string name="pair_next_button">Next</string>
    <string name="pair_paired">Pairing was successful</string>
    <string name="paired_message">"Test the connection. Your paired goTenna's light will flash once to confirm."</string>
    <string name="paired_test_button">Test</string>
    <string name="paired_wrong_device">Paired with the wrong device?</string>
    <string name="power_override_power_five">5.0W</string>
    <string name="power_override_power_four">4.0W</string>
    <string name="power_override_power_half">0.5W</string>
    <string name="power_override_power_one">1.0W</string>
    <string name="power_override_power_two">2.0W</string>
    <string name="ssr_send_category_dtg">DTG (Date Time Group DDHHMMZMONYY)</string>
    <string name="ssr_send_category_location">Location</string>
    <string name="ssr_send_category_type_requested">Type Requested</string>
    <string name="ssr_send_hint_cease_one">Cease (1)</string>
    <string name="ssr_send_hint_cease_two">Cease (2)</string>
    <string name="ssr_send_hint_contact_info">Contact Info</string>
    <string name="ssr_send_hint_dtg_end">End</string>
    <string name="ssr_send_hint_dtg_start">Start</string>
    <string name="ssr_send_hint_jca">JCA</string>
    <string name="ssr_send_hint_jia">JIA</string>
    <string name="ssr_send_hint_location">Tap here, then tap map to add points</string>
    <string name="ssr_send_hint_number">Number</string>
    <string name="ssr_send_hint_other">Other</string>
    <string name="ssr_send_hint_requesting_unit">Requesting Unit</string>
    <string name="ssr_send_hint_requestor">Requestor</string>
    <string name="ssr_send_hint_target">Target</string>
    <string name="ssr_send_hint_when">When</string>
    <string name="ssr_send_hint_where">Where</string>
    <string name="ssr_send_hint_who">Who</string>
    <string name="ssr_send_hint_why">Why</string>
    <string name="ssr_send_label_clear_location">Clear all coordinates</string>
    <string name="ssr_send_subtitle">Send SSR form.</string>
</resources>