<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.gotenna.atak.views.GTActionBar android:id="@id/gtActionBar" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:textSize="14.0sp" android:textColor="@color/white" android:ellipsize="marquee" android:id="@id/tvPowerTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/device_config_power" android:fontFamily="sans-serif-medium" android:layout_marginStart="@dimen/page_margin" />
    <LinearLayout android:id="@id/lytPowerButtons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:paddingStart="@dimen/page_margin" android:paddingEnd="@dimen/page_margin">
        <Button android:id="@id/powerButtonHalf" android:text="@string/power_override_power_half" style="@style/IndependentPowerSettingButton" />
        <Button android:id="@id/powerButtonOne" android:text="@string/power_override_power_one" android:layout_marginStart="@dimen/page_margin" style="@style/IndependentPowerSettingButton" />
        <Button android:id="@id/powerButtonTwo" android:text="@string/power_override_power_two" android:layout_marginStart="@dimen/page_margin" style="@style/IndependentPowerSettingButton" />
        <Button android:id="@id/powerButtonFour" android:text="@string/power_override_power_four" android:layout_marginStart="@dimen/page_margin" style="@style/IndependentPowerSettingButton" />
        <Button android:id="@id/powerButtonFive" android:text="@string/power_override_power_five" android:layout_marginStart="@dimen/page_margin" style="@style/IndependentPowerSettingButton" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@id/rvFrequencySet" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" />
</LinearLayout>
