<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/loginScrollView" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="12.0dip" app:layout_constraintBottom_toTopOf="@id/loginNextButton" app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/login_title" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" />
            <TextView android:textSize="12.0sp" android:textColor="@color/white" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/login_sub_title" android:lineSpacingExtra="4.0sp" android:layout_marginStart="26.0dip" android:layout_marginEnd="26.0dip" />
            <EditText android:id="@id/loginOrganizationEditText" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="32.0dip" android:hint="@string/login_organization" android:inputType="text" android:imeOptions="actionNext|flagNoFullscreen" android:backgroundTint="@color/onboarding_button_background" style="@style/onBoardingEditText" />
            <EditText android:id="@id/loginNameEditText" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="8.0dip" android:hint="@string/login_name" android:maxLength="256" android:inputType="textEmailAddress" android:imeOptions="actionNext|flagNoFullscreen" android:backgroundTint="@color/onboarding_button_background" style="@style/onBoardingEditText" />
            <EditText android:id="@id/loginPasswordEditText" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="8.0dip" android:hint="@string/login_password" android:inputType="textPassword" android:imeOptions="actionDone|flagNoFullscreen" android:backgroundTint="@color/onboarding_button_background" style="@style/onBoardingEditText" />
            <TextView android:textSize="12.0sp" android:textColor="@color/onboarding_button_background" android:gravity="center" android:id="@id/forgotPasswordTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/forgot_password" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" />
            <TextView android:textSize="12.0sp" android:textColor="@color/onboarding_deploy_offline" android:gravity="center" android:id="@id/loginDeployOfflineTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/login_offline" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" />
        </LinearLayout>
    </ScrollView>
    <Button android:id="@id/loginNextButton" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:foreground="@drawable/ripple_background" android:text="@string/login_next_button" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/loginScrollView" style="@style/onBoardingButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
