<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="@color/divider_gray" android:layout_width="fill_parent" android:layout_height="0.20000005dip" />
    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="22.0dip">
        <TextView android:gravity="center" android:id="@id/callsignTextView" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/dnop_table_header_callsign" android:layout_weight="@dimen/dnop_main_table_weight_callsign" style="@style/DnopTableHeaderCell" />
        <View android:background="@color/divider_gray" android:layout_width="0.20000005dip" android:layout_height="fill_parent" />
        <TextView android:id="@id/lastSeenTextView" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/dnop_table_header_last_seen" android:layout_weight="@dimen/dnop_main_table_weight_last_seen" style="@style/DnopTableHeaderCell" />
        <View android:background="@color/divider_gray" android:layout_width="0.20000005dip" android:layout_height="fill_parent" />
        <TextView android:id="@id/batteryTextView" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/dnop_table_header_battery" android:layout_weight="@dimen/dnop_main_table_weight_battery" style="@style/DnopTableHeaderCell" />
        <View android:background="@color/divider_gray" android:layout_width="0.20000005dip" android:layout_height="fill_parent" />
        <TextView android:id="@id/pliSentTextView" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/dnop_table_header_tx" android:layout_weight="@dimen/dnop_main_table_weight_tx" style="@style/DnopTableHeaderCell" />
        <View android:background="@color/divider_gray" android:layout_width="0.20000005dip" android:layout_height="fill_parent" />
        <TextView android:id="@id/pliReceivedTextView" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/dnop_table_header_rx" android:layout_weight="@dimen/dnop_main_table_weight_rx" style="@style/DnopTableHeaderCell" />
        <View android:background="@color/divider_gray" android:layout_width="0.20000005dip" android:layout_height="fill_parent" />
        <TextView android:id="@id/rssiTextView" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/dnop_table_header_rssi" android:layout_weight="@dimen/dnop_main_table_weight_rssi" style="@style/DnopTableHeaderCell" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <View android:background="@color/divider_gray" android:layout_width="fill_parent" android:layout_height="0.20000005dip" />
</androidx.appcompat.widget.LinearLayoutCompat>
