<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/pairPairedLayout" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/pair_paired" />
        <TextView android:textSize="12.0sp" android:textColor="@color/white" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/paired_message" android:layout_marginStart="32.0dip" android:layout_marginEnd="32.0dip" />
        <FrameLayout android:layout_gravity="center" android:id="@id/pairedTestButtonLayout" android:background="@drawable/bg_blue_rounded" android:layout_width="64.0dip" android:layout_height="36.0dip" android:layout_marginTop="20.0dip" android:foreground="@drawable/ripple_background" android:elevation="2.0dip">
            <TextView android:gravity="center" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/paired_test_button" style="@style/onBoardingButton" />
        </FrameLayout>
        <FrameLayout android:layout_gravity="center" android:id="@id/pairedWrongDeviceButtonLayout" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:foreground="@drawable/ripple_background" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip">
            <TextView android:textColor="@color/onboarding_deploy_offline" android:gravity="center" android:id="@id/pairedWrongDeviceTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/paired_wrong_device" />
        </FrameLayout>
    </LinearLayout>
    <FrameLayout android:id="@id/pairedNextButtonLayout" android:background="@color/onboarding_button_background" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:foreground="@drawable/ripple_background" android:layout_alignParentBottom="true">
        <TextView android:id="@id/pairedNextButtonTextView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/pair_next_button" style="@style/onBoardingButton" />
    </FrameLayout>
</RelativeLayout>
