<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingBottom="60.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/forgot_password" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" />
            <TextView android:textSize="12.0sp" android:textColor="@color/white" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/forgot_password_sub_title" android:lineSpacingExtra="4.0sp" android:layout_marginStart="26.0dip" android:layout_marginEnd="26.0dip" />
            <EditText android:id="@id/forgotPasswordEmailEditText" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="8.0dip" android:hint="@string/forgot_password_email" android:inputType="textEmailAddress" android:imeOptions="actionDone" android:backgroundTint="@color/onboarding_button_background" style="@style/onBoardingEditText" />
        </LinearLayout>
    </ScrollView>
    <FrameLayout android:id="@id/forgotPasswordSubmitButtonLayout" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:foreground="@drawable/ripple_background" android:layout_alignParentBottom="true">
        <TextView android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/forgot_password_submit_button" style="@style/onBoardingButton" />
    </FrameLayout>
</RelativeLayout>
